force-app/main/default/objects/Regulatory_Permit__c/Regulatory_Permit__c.object-meta.xml
<CustomObject>
    <description>Tracks government-issued permits for drilling, operations, emissions, and discharges with expiration and compliance monitoring.</description>
    <label>Regulatory Permit</label>
    <nameField>
        <label>Permit Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Regulatory Permits</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>