force-app/main/default/objects/Regulatory_Permit__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Regulatory Permits</relationshipLabel>
    <relationshipName>Regulatory_Permits</relationshipName>
    <type>Lookup</type>
</CustomField>