force-app/main/default/objects/Regulatory_Permit__c/fields/Compliance_Status__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Status__c</fullName>
    <label>Compliance Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Compliant</fullName>
            </value>
            <value>
                <fullName>Non-Compliant</fullName>
            </value>
            <value>
                <fullName>Pending Review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>