force-app/main/default/objects/Regulatory_Permit__c/fields/Facility__c.field-meta.xml
<CustomField>
    <fullName>Facility__c</fullName>
    <label>Facility</label>
    <type>Text</type>
    <length>255</length>
</CustomField>