force-app/main/default/objects/Regulatory_Permit__c/fields/Permit_Type__c.field-meta.xml
<CustomField>
    <fullName>Permit_Type__c</fullName>
    <label>Permit Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SPCC</fullName>
            </value>
            <value>
                <fullName>Title V</fullName>
            </value>
            <value>
                <fullName>NSPS</fullName>
            </value>
            <value>
                <fullName>NPDES</fullName>
            </value>
            <value>
                <fullName>Underground Injection</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>