force-app/main/default/objects/Regulatory_Permit__c/fields/Pipeline__c.field-meta.xml
<CustomField>
    <fullName>Pipeline__c</fullName>
    <label>Pipeline</label>
    <referenceTo>Pipeline__c</referenceTo>
    <relationshipLabel>Regulatory Permits</relationshipLabel>
    <relationshipName>Regulatory_Permits</relationshipName>
    <type>Lookup</type>
</CustomField>