force-app/main/default/objects/Regulatory_Permit__c/fields/Refinery__c.field-meta.xml
<CustomField>
    <fullName>Refinery__c</fullName>
    <label>Refinery</label>
    <referenceTo>Refinery__c</referenceTo>
    <relationshipLabel>Regulatory Permits</relationshipLabel>
    <relationshipName>Regulatory_Permits</relationshipName>
    <type>Lookup</type>
</CustomField>