force-app/main/default/objects/Regulatory_Permit__c/fields/Renewal_Reminder__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Reminder__c</fullName>
    <label>Renewal Reminder</label>
    <type>Date</type>
</CustomField>