force-app/main/default/objects/Regulatory_Permit__c/fields/Renewal_Reminder_Sent__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Reminder_Sent__c</fullName>
    <label>Renewal Reminder Sent</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>