force-app/main/default/objects/Regulatory_Permit__c/fields/Responsible_Party__c.field-meta.xml
<CustomField>
    <fullName>Responsible_Party__c</fullName>
    <label>Responsible Party</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipName>Permit_Responsible_Parties</relationshipName>
</CustomField>