force-app/main/default/objects/Regulatory_Permit__c/fields/Well__c.field-meta.xml
<CustomField>
    <fullName>Well__c</fullName>
    <label>Well</label>
    <referenceTo>Well__c</referenceTo>
    <relationshipLabel>Regulatory Permits</relationshipLabel>
    <relationshipName>Regulatory_Permits</relationshipName>
    <type>Lookup</type>
</CustomField>